First commited as before_55148_rev2